# weather

./: Cargo.toml  README.md
src/: args.rs  client.rs  main.rs
